digits_vectorized_fixed/hls_component/accelerator/hls/csim/report/accelerator_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch CLANG as the compiler.
   Compiling ../../../../../main.cpp in debug mode
csim.mk:88: recipe for target 'obj/main.o' failed
In file included from ../../../../../main.cpp:1:
In file included from ../../../../../layer.h:4:
In file included from ../../../../../activations.h:7:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/ap_fixed.h:9:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis_HLS/2024.1/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
In file included from ../../../../../main.cpp:1:
../../../../../layer.h:148:15: error: expected ',' or '>' in template-parameter-list
template <int IN_SIZE, int OUT_SIZE>
              ^
../../../../../accelerator.h:14:17: note: expanded from macro 'IN_SIZE'
#define IN_SIZE 64        
                ^
In file included from ../../../../../main.cpp:1:
../../../../../layer.h:148:22: error: expected unqualified-id
template <int IN_SIZE, int OUT_SIZE>
                     ^
1 warning and 2 errors generated.
make: *** [obj/main.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
